--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body class="text-white font-sans">
-  <!-- Navigation Bar -->
+
   <nav class="bg-gray-900 p-4 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <a href="index.html" class="text-2xl font-bold text-teal-400">MahaPoly</a>
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <!-- Contact Header Section -->
+
   <section class="text-center py-16" id="contact">
     <h1 class="text-5xl font-extrabold text-teal-400 mb-6" data-aos="fade-down">Contact Us</h1>
     <p class="text-lg text-gray-300 mb-8" data-aos="fade-up">We'd love to hear from you! Send us your feedback, suggestions, or queries.</p>
@@ -123,7 +123,7 @@
         <div class="space-y-4" data-aos="fade-up" data-aos-delay="100">
           <div class="text-4xl">📧</div>
           <h4 class="text-xl font-semibold text-white">Email Us</h4>
-          <p class="text-gray-300">support@mahapoly.in</p>
+          <p class="text-gray-300">yashdate@gmail.com</p>
         </div>
         <div class="space-y-4" data-aos="fade-up" data-aos-delay="200">
           <div class="text-4xl">💬</div>
@@ -142,7 +142,7 @@
   <!-- Footer -->
   <footer class="text-center py-10 text-gray-400 text-sm bg-black">
     <p>Have questions? Reach us at <a href="mailto:support@mahapoly.in" class="underline">support@mahapoly.in</a></p>
-    <p class="mt-2">&copy; 2025 MahaPoly - Made with ❤️ for students by students.</p>
+    <p class="mt-2">&copy; 2025 MahaPoly - Made with ❤️ for students by DY Patil.</p>
   </footer>
 
   <script>
