Updated HTML files with detailed information for colleges and improved index.html

--- a/college-search.html
+++ b/college-search.html
@@ -44,7 +44,7 @@
       "Thane", "Jalgaon", "Solapur", "Latur", "Satara", "Chandrapur", "Akola", "Beed",
       "Ahmednagar", "Parbhani", "Yavatmal", "Buldhana", "Wardha", "Osmanabad", "Gondia",
       "Ratnagiri", "Hingoli", "Washim", "Nandurbar", "Palghar", "Sangli", "Raigad",
-      "Gadchiroli", "Sindhudurg", "Bhandara", "Dhule", "Ausari Khurud"
+      "Gadchiroli", "Sindhudurg", "Bhandara", "Dhule", "Awasari Khurd"
     ];
 
     const grid = document.getElementById("collegeGrid");
