--- a/govt-poly-ahmednagar.html
+++ b/govt-poly-ahmednagar.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Ahmednagar in Ahmednagar has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Ahmednagar was established in 1990 with the aim of providing quality technical education to students in the region. Over the years, the college has grown to become a leading institution in Maharashtra, offering diploma courses in various engineering disciplines. The college is affiliated with the Maharashtra State Board of Technical Education (MSBTE) and is approved by AICTE.</p>
+      <p class="text-lg text-gray-200">The institution is known for its state-of-the-art infrastructure, including modern laboratories, workshops, and a well-stocked library. It has a sprawling campus that fosters a conducive environment for learning and innovation. The college regularly organizes seminars, workshops, and industrial visits to ensure students are industry-ready.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Since its inception in 1990, Government Polytechnic Ahmednagar has been committed to excellence in technical education. The college started with a few diploma courses and has expanded its offerings over the years to include a wide range of engineering disciplines. It has played a pivotal role in shaping the careers of thousands of students, many of whom have gone on to achieve great success in their respective fields.</p>
+      <p class="text-lg text-gray-200">The college has consistently adapted to the changing needs of the industry, introducing new courses and upgrading its facilities to stay ahead in the field of technical education. Its alumni network is strong, with graduates working in reputed organizations across the globe.</p>
     </section>
 
     <section data-aos="fade-up">
@@ -44,22 +50,22 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Campus & Facilities</h2>
-      <p class="text-lg text-gray-200">The campus includes modern laboratories, Wi-Fi enabled classrooms, dedicated workshops, and a central library with thousands of volumes. Students enjoy facilities such as a cafeteria, indoor games, and tech clubs.</p>
+      <p class="text-lg text-gray-200">The campus includes modern laboratories, Wi-Fi enabled classrooms, dedicated workshops, and a central library with thousands of volumes. Students enjoy facilities such as a cafeteria, indoor games, and tech clubs. The college also has a dedicated placement cell that actively connects students with top recruiters.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Faculty</h2>
-      <p class="text-lg text-gray-200">The faculty comprises experienced professors, many with industrial exposure and research backgrounds. Regular workshops and training programs keep them updated with the latest trends in engineering education.</p>
+      <p class="text-lg text-gray-200">The faculty comprises experienced professors, many with industrial exposure and research backgrounds. Regular workshops and training programs keep them updated with the latest trends in engineering education. The faculty is dedicated to mentoring students and helping them achieve their academic and career goals.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Hostel</h2>
-      <p class="text-lg text-gray-200">Separate hostel facilities are available for boys and girls. Rooms are clean, well-ventilated, and include internet access. The hostel mess serves hygienic and nutritious meals.</p>
+      <p class="text-lg text-gray-200">Separate hostel facilities are available for boys and girls. Rooms are clean, well-ventilated, and include internet access. The hostel mess serves hygienic and nutritious meals. The hostel provides a safe and comfortable environment for students to focus on their studies.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Placement Records</h2>
-      <p class="text-lg text-gray-200">The placement cell actively connects students with top recruiters. Alumni have secured jobs in reputed companies and public sector units across India.</p>
+      <p class="text-lg text-gray-200">The placement cell actively connects students with top recruiters. Alumni have secured jobs in reputed companies and public sector units across India. The college has a strong track record of placements, with many students being placed in leading organizations every year.</p>
     </section>
 
     <section data-aos="fade-up">
