--- a/govt-poly-aurangabad.html
+++ b/govt-poly-aurangabad.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Aurangabad in Aurangabad has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Aurangabad was established in 1955 and is one of the oldest polytechnic colleges in Maharashtra. The college is renowned for its academic excellence and state-of-the-art facilities. It is affiliated with MSBTE and approved by AICTE.</p>
+      <p class="text-lg text-gray-200">The institution offers a wide range of diploma courses and has a strong focus on research and innovation. It regularly collaborates with industries to provide students with practical exposure.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Established in 1955, Government Polytechnic Aurangabad has a rich legacy of producing skilled engineers and technicians. The college has been a pioneer in technical education and has contributed significantly to the development of the region.</p>
+      <p class="text-lg text-gray-200">Over the years, the college has expanded its infrastructure and introduced new courses to keep up with the evolving needs of the industry. Its alumni are well-placed in reputed organizations worldwide.</p>
     </section>
 
     <section data-aos="fade-up">
