--- a/govt-poly-gondia.html
+++ b/govt-poly-gondia.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Gondia in Gondia has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Gondia was established in 1990 to cater to the technical education needs of the region. The college is affiliated with MSBTE and approved by AICTE. It is known for its serene campus and focus on practical learning.</p>
+      <p class="text-lg text-gray-200">The college offers modern facilities, including well-equipped laboratories, workshops, and a library. It regularly organizes industry visits and skill development programs to ensure students are prepared for professional challenges.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Since its establishment in 1990, Government Polytechnic Gondia has been dedicated to providing quality technical education. The college started with a few diploma courses and has expanded its offerings over the years. It has played a significant role in empowering students from the region.</p>
+      <p class="text-lg text-gray-200">The institution has consistently upgraded its infrastructure and curriculum to meet industry standards. Its alumni network is strong, with graduates excelling in various fields.</p>
     </section>
 
     <section data-aos="fade-up">
