--- a/govt-poly-pune.html
+++ b/govt-poly-pune.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Pune in Pune has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Pune was established in 1957 and is one of the oldest and most prestigious polytechnic colleges in Maharashtra. The college is affiliated with MSBTE and approved by AICTE. It is renowned for its excellent academic standards, state-of-the-art infrastructure, and focus on practical learning.</p>
+      <p class="text-lg text-gray-200">The institution offers a wide range of diploma courses and has a strong emphasis on industry collaboration. It regularly organizes seminars, workshops, and industrial visits to ensure students are well-prepared for their careers.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Established in 1957, Government Polytechnic Pune has a rich history of contributing to technical education in India. The college started with a few diploma courses and has grown to become a hub for technical excellence. Over the decades, it has produced thousands of skilled professionals who have excelled in various industries.</p>
+      <p class="text-lg text-gray-200">The institution has consistently upgraded its facilities and curriculum to meet the evolving needs of the industry. Its alumni network is vast, with graduates holding key positions in reputed organizations worldwide.</p>
     </section>
 
     <section data-aos="fade-up">
@@ -39,27 +45,30 @@
         <li>Electrical Engineering</li>
         <li>Civil Engineering</li>
         <li>Electronics & Telecommunication</li>
+        <li>Information Technology</li>
+        <li>Automobile Engineering</li>
       </ul>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Campus & Facilities</h2>
-      <p class="text-lg text-gray-200">The campus includes modern laboratories, Wi-Fi enabled classrooms, dedicated workshops, and a central library with thousands of volumes. Students enjoy facilities such as a cafeteria, indoor games, and tech clubs.</p>
+      <p class="text-lg text-gray-200">The campus spans over 25 acres and includes modern laboratories, Wi-Fi enabled classrooms, dedicated workshops, and a central library with thousands of volumes. Students have access to a cafeteria, sports facilities, and various student clubs that promote extracurricular activities.</p>
+      <p class="text-lg text-gray-200">The college also has a dedicated innovation center to encourage research and development among students and faculty.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Faculty</h2>
-      <p class="text-lg text-gray-200">The faculty comprises experienced professors, many with industrial exposure and research backgrounds. Regular workshops and training programs keep them updated with the latest trends in engineering education.</p>
+      <p class="text-lg text-gray-200">The faculty at Government Polytechnic Pune comprises highly qualified and experienced professionals. Many of them have industrial exposure and research backgrounds. Regular training programs and workshops ensure they stay updated with the latest trends in engineering education.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Hostel</h2>
-      <p class="text-lg text-gray-200">Separate hostel facilities are available for boys and girls. Rooms are clean, well-ventilated, and include internet access. The hostel mess serves hygienic and nutritious meals.</p>
+      <p class="text-lg text-gray-200">The college provides separate hostel facilities for boys and girls. The hostels are equipped with modern amenities, including internet access, recreational areas, and a mess that serves hygienic and nutritious meals.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Placement Records</h2>
-      <p class="text-lg text-gray-200">The placement cell actively connects students with top recruiters. Alumni have secured jobs in reputed companies and public sector units across India.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Pune has an active placement cell that connects students with top recruiters. The college has a stellar placement record, with students securing positions in leading companies such as Tata Motors, Infosys, and L&T. Many alumni have also excelled in public sector units and entrepreneurial ventures.</p>
     </section>
 
     <section data-aos="fade-up">
