--- a/govt-poly-akola.html
+++ b/govt-poly-akola.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Akola in Akola has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Akola was established in 1968 and is dedicated to nurturing technical talent in Maharashtra. The college offers a dynamic learning environment, modern infrastructure, and a focus on skill development to ensure student success. It is affiliated with MSBTE and approved by AICTE.</p>
+      <p class="text-lg text-gray-200">The institution provides students with opportunities to participate in workshops, seminars, and industrial visits to enhance their practical knowledge.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Established in 1968, Government Polytechnic Akola has been a cornerstone of technical education in the region. The college has consistently upgraded its infrastructure and curriculum to meet industry standards.</p>
+      <p class="text-lg text-gray-200">Its alumni network is strong, with graduates excelling in various fields and contributing to the development of the nation.</p>
     </section>
 
     <section data-aos="fade-up">
