--- a/govt-poly-amravati.html
+++ b/govt-poly-amravati.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Amravati in Amravati has a rich legacy of producing skilled engineers and technicians since its establishment. Known for its practical curriculum and top-tier faculty, the college serves as a cornerstone of technical education in the region.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Amravati was established in 1964 and is a leading institution in technical education. The college is known for its innovative teaching methods and strong industry connections. It is affiliated with MSBTE and approved by AICTE.</p>
+      <p class="text-lg text-gray-200">The college offers modern facilities, including advanced laboratories, workshops, and a library. It emphasizes hands-on learning and research opportunities for students.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Since its inception in 1964, Government Polytechnic Amravati has been committed to excellence in technical education. The college started with a few diploma courses and has expanded its offerings over the years to include a wide range of engineering disciplines.</p>
+      <p class="text-lg text-gray-200">The institution has consistently adapted to the changing needs of the industry, introducing new courses and upgrading its facilities. Its alumni network is strong, with graduates working in reputed organizations across the globe.</p>
     </section>
 
     <section data-aos="fade-up">
