--- a/govt-poly-ausari-khurud.html
+++ b/govt-poly-ausari-khurud.html
@@ -27,7 +27,14 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Ausari Khurud provides high-quality technical education in a serene and skill-driven atmosphere. With a strong focus on practical learning, the college is a top choice in rural Maharashtra.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Ausari Khurud was established in 2008 to cater to the technical education needs of rural Maharashtra. The college is known for its serene campus and focus on practical learning. It is affiliated with MSBTE and approved by AICTE.</p>
+      <p class="text-lg text-gray-200">The college offers modern facilities, including well-equipped laboratories, workshops, and a library. It regularly organizes industry visits and skill development programs to ensure students are prepared for professional challenges.</p>
+    </section>
+
+    <section data-aos="fade-up">
+      <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
+      <p class="text-lg text-gray-200">Since its establishment in 2008, Government Polytechnic Ausari Khurud has been dedicated to providing quality technical education. The college started with a few diploma courses and has expanded its offerings over the years. It has played a significant role in empowering students from rural areas.</p>
+      <p class="text-lg text-gray-200">The institution has consistently upgraded its infrastructure and curriculum to meet industry standards. Its alumni network is strong, with graduates excelling in various fields.</p>
     </section>
 
     <section data-aos="fade-up">
