--- a/govt-poly-ausari-khurud.html
+++ b/govt-poly-ausari-khurud.html
@@ -70,7 +70,7 @@
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Gallery</h2>
       <div class="w-full h-64 bg-gray-700 flex items-center justify-center rounded-lg text-gray-300 text-xl">
-        [Place College Image Here]
+        <img src="https://www.gpawasari.ac.in/images/One.JPG" alt="h">
       </div>
     </section>
 
