Correct title and content references for Government Polytechnic Awasari Khurd

--- a/govt-poly-awasari-khurd.html
+++ b/govt-poly-awasari-khurd.html
@@ -65,13 +65,12 @@
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Placement Records</h2>
       <p class="text-lg text-gray-200">With growing ties to local industries and training partners, the college has steadily improved its placement performance, especially in government and private sector companies.</p>
-    </section>
-
-    <section data-aos="fade-up">
+    </section>    <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Gallery</h2>
       <div class="w-full h-64 bg-gray-700 flex items-center justify-center rounded-lg text-gray-300 text-xl">
-        [Place College Image Here]
+       <img src="https://www.gpawasari.ac.in/images/Five.JPG" alt="gpa">
       </div>
+      <p class="text-sm text-gray-400 mt-2 text-center">Visit: <a href="https://www.gpawasari.ac.in/" target="_blank" class="text-blue-400 underline">www.gpawasari.ac.in</a> for more photos and information</p>
     </section>
 
   </main>
