--- a/college-search.html
+++ b/college-search.html
@@ -42,8 +42,7 @@
     const colleges = [
       "Mumbai", "Pune", "Nagpur", "Nashik", "Aurangabad", "Kolhapur", "Amravati", "Nanded",
       "Thane", "Jalgaon", "Solapur", "Latur", "Satara", "Chandrapur", "Akola", "Beed",
-      "Ahmednagar", "Parbhani", "Yavatmal", "Buldhana", "Wardha", "Osmanabad", "Gondia",
-      "Ratnagiri", "Hingoli", "Washim", "Nandurbar", "Palghar", "Sangli", "Raigad",
+      "Ahmednagar", "Parbhani", "Yavatmal", "Buldhana", "Wardha", "Osmanabad", "Gondia",      "Ratnagiri", "Hingoli", "Washim", "Nandurbar", "Palghar", "Sangli", "Raigad",
       "Gadchiroli", "Sindhudurg", "Bhandara", "Dhule", "Awasari Khurd"
     ];
 
