--- a/govt-poly-awasari-khurd.html
+++ b/govt-poly-awasari-khurd.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Government Polytechnic Ausari Khurud - MahaPoly</title>
+  <title>Government Polytechnic Awasari Khurd - MahaPoly</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -17,9 +17,8 @@
 
   <section class="relative h-96 bg-cover bg-center flex items-center justify-center" style="background-image: url('path-to-image.jpg');">
     <div class="absolute inset-0 bg-black bg-opacity-60"></div>
-    <div class="relative z-10 text-center px-4">
-      <h1 class="text-5xl font-extrabold text-white drop-shadow-lg">Government Polytechnic Ausari Khurud</h1>
-      <p class="mt-4 text-xl text-gray-300">Leading Technical Education in Ausari Khurud</p>
+    <div class="relative z-10 text-center px-4">      <h1 class="text-5xl font-extrabold text-white drop-shadow-lg">Government Polytechnic Awasari Khurd</h1>
+      <p class="mt-4 text-xl text-gray-300">Leading Technical Education in Awasari Khurd</p>
     </div>
   </section>
 
@@ -27,13 +26,13 @@
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">About the College</h2>
-      <p class="text-lg text-gray-200">Government Polytechnic Ausari Khurud was established in 2008 to cater to the technical education needs of rural Maharashtra. The college is known for its serene campus and focus on practical learning. It is affiliated with MSBTE and approved by AICTE.</p>
+      <p class="text-lg text-gray-200">Government Polytechnic Awasari Khurd was established in 2008 to cater to the technical education needs of rural Maharashtra. The college is known for its serene campus and focus on practical learning. It is affiliated with MSBTE and approved by AICTE.</p>
       <p class="text-lg text-gray-200">The college offers modern facilities, including well-equipped laboratories, workshops, and a library. It regularly organizes industry visits and skill development programs to ensure students are prepared for professional challenges.</p>
     </section>
 
     <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">History</h2>
-      <p class="text-lg text-gray-200">Since its establishment in 2008, Government Polytechnic Ausari Khurud has been dedicated to providing quality technical education. The college started with a few diploma courses and has expanded its offerings over the years. It has played a significant role in empowering students from rural areas.</p>
+      <p class="text-lg text-gray-200">Since its establishment in 2008, Government Polytechnic Awasari Khurd has been dedicated to providing quality technical education. The college started with a few diploma courses and has expanded its offerings over the years. It has played a significant role in empowering students from rural areas.</p>
       <p class="text-lg text-gray-200">The institution has consistently upgraded its infrastructure and curriculum to meet industry standards. Its alumni network is strong, with graduates excelling in various fields.</p>
     </section>
 
@@ -68,7 +67,7 @@
     </section>    <section data-aos="fade-up">
       <h2 class="text-3xl font-bold text-blue-400 mb-4">Gallery</h2>
       <div class="w-full h-64 bg-gray-700 flex items-center justify-center rounded-lg text-gray-300 text-xl">
-       <img src="https://www.gpawasari.ac.in/images/Five.JPG" alt="gpa">
+       <img src="https://www.gpawasari.ac.in/images/Five.JPG" alt="Government Polytechnic Awasari Khurd Campus">
       </div>
       <p class="text-sm text-gray-400 mt-2 text-center">Visit: <a href="https://www.gpawasari.ac.in/" target="_blank" class="text-blue-400 underline">www.gpawasari.ac.in</a> for more photos and information</p>
     </section>
