--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="bg-gray-900 p-4 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold text-teal-400">MahaPoly</h1>      <ul class="flex space-x-6 text-gray-300">
-        <li><a href="#about" class="hover:text-white">About</a></li>
+        <li><a href="about.html" class="hover:text-white">About</a></li>
         <li><a href="college-search.html" class="hover:text-white">Search Colleges</a></li>
         <li><a href="https://msbte.org.in" target="_blank" class="hover:text-white">MSBTE</a></li>
         <li><a href="contact.html" class="hover:text-white">Contact</a></li>
