--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <li><a href="index.html" class="hover:text-white">Home</a></li>
         <li><a href="college-search.html" class="hover:text-white">Search Colleges</a></li>
         <li><a href="https://msbte.org.in" target="_blank" class="hover:text-white">MSBTE</a></li>
-        <li><a href="#contact" class="hover:text-white text-teal-400">Contact</a></li>
+        <li><a href="about.html" class="hover:text-white text-teal-400">Contact</a></li>
       </ul>
     </div>
   </nav>
